# text-over-image-gen-for-marketing-campaigns

./: .env.example  .gitignore  Dockerfile  README.md  backfill_embeddings.py  demo_script.md  generate_master_manifest.py  pyproject.toml  stack-outline.md  stack.md  stack_functions.md  test_campaign_dir_fix.py  test_countries_api.py  test_country_selector.html  test_country_selector_final.py  test_country_selector_integration.py  test_country_selector_manual.py  test_path_generation.py  test_text_styling.py
app/: main.py  routes.py
app/models/: campaign.py
app/routers/: campaigns.py
app/services/: embeddings.py  generate_image.py  generator.py  logging_db.py
assets/inputs/: manifest.json
backend/app/: main.py  routes.py
backend/app/models/: __init__.py  campaign.py
backend/app/services/: audience_selector.py  compliance.py  country_language.py  embeddings.py  generator.py  logging_db.py
db/: campaigns.duckdb  campaigns.duckdb.wal
frontend/: README.md
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: base.html  index.html
tests/: test_directory_structure.py  test_server_routes.py  test_server_startup.py
