[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "duckdb>=1.4.1",
    "fastapi[standard]>=0.112.1",
    "openai>=2.3.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=5.1.1",
]
